# dpc-neuron

./: .gitignore  LICENSE  Makefile  Plan.md  README.md  analyzer.py  config.toml  events_template.csv  gui_utilities.py  launcher.bat  main-gui.py  main.py  main_CLI.py  metadata_sample.toml  plotting_base_script.py  processing_functions.py  profile.prof  profile_cached.prof  profile_cached_numba.prof  purge_cache.py  purge_feathers.py  pyproject.toml  subdir.py  test_functions.py  utilities.py
.github/workflows/: release-linux.yaml  release-mac.yaml  release-windows.yaml  release.yaml
classes/: __init__.py  analyzer.py  converter.py  engine.py  errors.py  gui.py  metadata.py  processor.py  subdir.py  toml_data.py
functions/: __init__.py  gui_utilities.py  processing.py  toml_handling.py  utilities.py  validation.py
interface/: gui_constants.py  gui_main.py  gui_panels.py
processing/classes/: engine.py  processor.py  toml_data.py
processing/functions/: processing.py  validation.py
src/: main.py
src/analysis/: engine.py  processing_functions.py  smooth.py  toml_data.py
src/analysis/compiled/: compile_smooth.py
src/interface/: gui_constants.py  gui_main.py  gui_panels.py
src/neuron/analysis/: converter.py  engine.py  processor.py  smooth.py  validation.py
src/neuron/analysis/compiled/: compile_rename.py  compile_smooth.py
src/neuron/compiled/: compile_smooth.py  cy_smooth.pyx
src/neuron/interface/: gui_constants.py  gui_main.py  gui_panels.py
src/neuron/processing/classes/: converter.py  processor.py
test/: test_functions.py
