[project]
name = "neuron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.0",
    "numba>=0.61",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "python-calamine>=0.4.0",
    "snakeviz>=2.2.2",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
