[project]
name = "neuron"
version = "1.0"
description = "Helps analyze data for my Ca measurement microscopy workflows. Determines what agonists cells reacted to and how strongly."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numba>=0.63.1",
    "numpy>=2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "python-calamine>=0.4.0",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "snakeviz>=2.2.2",
    "nuitka>=2.8.10",
]
